// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Warnings renders no warnings 1`] = `""`;

exports[`Warnings renders three warnings 1`] = `
<div
  className="info-bubble-warnings"
>
  <p
    key="segments.warnings.does-not-fit"
  >
    <injectIntl(FormattedMessage)
      defaultMessage="This segment doesn’t fit within the street."
      id="segments.warnings.does-not-fit"
    />
  </p>
  <p
    key="segments.warnings.not-wide"
  >
    <injectIntl(FormattedMessage)
      defaultMessage="This segment might not be wide enough."
      id="segments.warnings.not-wide"
    />
  </p>
  <p
    key="segments.warnings.too-wide"
  >
    <injectIntl(FormattedMessage)
      defaultMessage="This segment might be too wide."
      id="segments.warnings.too-wide"
    />
  </p>
</div>
`;

exports[`Warnings renders two warnings 1`] = `
<div
  className="info-bubble-warnings"
>
  <p
    key="segments.warnings.does-not-fit"
  >
    <injectIntl(FormattedMessage)
      defaultMessage="This segment doesn’t fit within the street."
      id="segments.warnings.does-not-fit"
    />
  </p>
  <p
    key="segments.warnings.too-wide"
  >
    <injectIntl(FormattedMessage)
      defaultMessage="This segment might be too wide."
      id="segments.warnings.too-wide"
    />
  </p>
</div>
`;

exports[`Warnings renders warning 1 1`] = `
<div
  className="info-bubble-warnings"
>
  <p
    key="segments.warnings.does-not-fit"
  >
    <injectIntl(FormattedMessage)
      defaultMessage="This segment doesn’t fit within the street."
      id="segments.warnings.does-not-fit"
    />
  </p>
</div>
`;

exports[`Warnings renders warning 2 1`] = `
<div
  className="info-bubble-warnings"
>
  <p
    key="segments.warnings.not-wide"
  >
    <injectIntl(FormattedMessage)
      defaultMessage="This segment might not be wide enough."
      id="segments.warnings.not-wide"
    />
  </p>
</div>
`;

exports[`Warnings renders warning 3 1`] = `
<div
  className="info-bubble-warnings"
>
  <p
    key="segments.warnings.too-wide"
  >
    <injectIntl(FormattedMessage)
      defaultMessage="This segment might be too wide."
      id="segments.warnings.too-wide"
    />
  </p>
</div>
`;
